--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,8 @@
     <string name="sunrise">Sunrise</string>
     <string name="sunset">Sunset</string>
     <string name="click_on_your_zordic_sign">Click on your Zodiac Sign</string>
+    <string name="ok">OK</string>
+    <string name="permission_rationale">Location data is used as part of the Google Fit API</string>
+    <string name="settings">Settings</string>
+    <string name="permission_denied_explanation">Permission was denied, but is needed for core         functionality.</string>
 </resources>
