--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="permission_rationale">Location data is used as part of the Google Fit API</string>
     <string name="settings">Settings</string>
     <string name="permission_denied_explanation">Permission was denied, but is needed for core         functionality.</string>
+    <string name="hello_kunal">Hello, Kunal</string>
 </resources>
