--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,31 @@
     <string name="settings">Settings</string>
     <string name="permission_denied_explanation">Permission was denied, but is needed for core         functionality.</string>
     <string name="hello_kunal">Hello, Kunal</string>
+    <string name="time_tracking">Time Tracking</string>
+    <string name="upcoming_alarms">Upcoming alarms</string>
+    <string name="breakfast_notification_channel_description">Breakfast reminder</string>
+    <string name="egg_notification_channel_id" translatable="false">egg_channel</string>
+    <string name="egg_notification_channel_name" translatable="true">Egg</string>
+    <string name="breakfast_notification_channel_id" translatable="false">fcm_default_channel</string>
+    <string name="breakfast_notification_channel_name" translatable="true">Breakfast</string>
+    <string name="eggs_ready">Your Egg is Ready</string>
+    <string name="notification_title">Egg Boiled</string>
+    <string name="it_s_time_to_drink_water">It\'s time to drink water</string>
+    <string name="super_alarm">Super Alarm</string>
+    <string name="preview">Preview</string>
+    <string name="snooze">Snooze</string>
+    <string name="off">off</string>
+    <string name="on">on</string>
+    <string name="select_ringtone">Select Ringtone</string>
+    <string name="volume">Volume</string>
+    <string name="save">Save</string>
+    <string name="stop_watch">Stop Watch</string>
+    <string name="exit_preview">Exit preview</string>
+    <string name="dismiss">Dismiss</string>
+
+    <string-array name="upcomingAlarmsMenu">
+        <item>Edit</item>
+        <item>Duplicate</item>
+        <item>Delete</item>
+    </string-array>
 </resources>
